fix: ConversationView: Fix scrollbar not being the right-most widget
This makes it possible to easily 'find' the scrollbar while having Gajim in fullscreen mode.

--- a/gajim/data/style/gajim.css
+++ b/gajim/data/style/gajim.css
@@ -523,6 +523,8 @@ infobar.error > revealer > box {
 .conversation-row {
     padding: 10px 3px 4px 6px;
     border-radius: 4px;
+    margin-left: 8px;
+    margin-right: 2px;
 }
 .conversation-row:hover button {
     opacity: 1;
